# N3LDGSemiCRFSegmentation-SegDemo

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/NNCRFSegmentor/: CMakeLists.txt  NNCRFSegmentor.cpp  NNCRFSegmentor.h
src/NNCRFSegmentor/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h
src/NNCharSparseCRFSegmentor/: CMakeLists.txt  NNCRFSegmentor.cpp
src/NNCharSparseCRFSegmentor/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h
src/NNHypridCRFSegmentor/: CMakeLists.txt  NNHypridCRFSegmentor.cpp  NNHypridCRFSegmentor.h
src/NNHypridCRFSegmentor/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h
src/NNSEmbHypridCRFSegmentor/: NNSEmbHypridCRFSegmentor.cpp  NNSEmbHypridCRFSegmentor.h
src/NNSEmbHypridCRFSegmentor/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h
src/NNSEmbSemiCRFSegmentor/: NNSEmbSemiCRFSegmentor.cpp  NNSEmbSemiCRFSegmentor.h
src/NNSEmbSemiCRFSegmentor/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h
src/NNSemiCRFSegmentor/: CMakeLists.txt  NNSemiCRFSegmentor.cpp
src/NNSemiCRFSegmentor/model/: ComputionGraph.h  HyperParams.h  ModelParams.h
src/NNSemiCRFSegmentor1/: CMakeLists.txt  NNSemiCRFSegmentor.cpp  NNSemiCRFSegmentor.h
src/NNSemiCRFSegmentor1/model/: ComputionGraph.h  Driver.h  (+2 more)
src/NNSparseCRFSegmentor/: NNCRFSegmentor.cpp
src/WCRFSegmentor/: CMakeLists.txt  NNCRFSegmentor.cpp  NNCRFSegmentor.h
src/basic/: CRFMLLoss.h  Instance.h  InstanceReader.h  InstanceWriter.h  Options.h  Pipe.h  Reader.h  Segmentation.h  Semi0CRFMLLoss.h  Writer.h
(+7 files in other folders)
