
include_directories(
  basic
)


add_subdirectory(NNCRFSegmentor)
#add_subdirectory(NNSemiCRFSegmentor)
add_subdirectory(NNSemiCRFSegmentor1)
#add_subdirectory(NNSparseCRFSegmentor)
#add_subdirectory(WCRFSegmentor)
#add_subdirectory(NNHypridCRFSegmentor)
#add_subdirectory(NNSEmbSemiCRFSegmentor)
#add_subdirectory(NNSEmbHypridCRFSegmentor)
#add_subdirectory(NNCharSparseCRFSegmentor)


